# boq-django

./: .env.example  .gitignore  README.md  TODO.md  manage.py  pyproject.toml  requirements.txt
config/: celery.py  urls.py
config/settings/: base.py  local.py  production.py
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md  permissions.md  testing.md
domain/base/: admin.py  apps.py  middleware.py  mixins.py  models.py  permissions.py  urls.py
domain/base/migrations/: 0001_initial.py
domain/base/views/: __init__.py  auth_views.py  dashboard_views.py
domain/boq/: apps.py  urls.py
domain/boq/forms/: boq_forms.py
domain/boq/migrations/: 0001_initial.py  0002_project_management_fee_percent_project_vat_percent.py
domain/boq/models/: __init__.py  boq.py
domain/boq/templatetags/: boq_extras.py
domain/boq/views/: bill_items_views.py  pdf_export_views.py  project_views.py
domain/catalog/: admin.py  apps.py  urls.py
domain/catalog/migrations/: 0001_initial.py  0002_alter_catalogitem_options.py
domain/catalog/models/: __init__.py  catalog.py
domain/catalog/views/: catalog_views.py
domain/notification/: admin.py  apps.py  models.py  tasks.py  urls.py
domain/notification/migrations/: 0001_initial.py
domain/notification/services/: context_processors.py  notification_service.py
static/assets/js/: datatables.js
templates/: template_base.html
templates/auth/: login.html
templates/domain/boq/: bill_item_confirm_delete.html  bill_item_form.html  (+4 more)
templates/partials/: footer.html  side_nav.html  top_nav.html
tests/: factories.py
(+4 files in other folders)
